# synthetic-environment-framework

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/core/: core.hpp
src/core/context/: GlobalContext.hpp
src/core/data/properties/: Property.hpp  PropertyChangeListener.cpp  PropertyChangeListener.hpp  PropertyGroup.cpp  PropertyGroup.hpp
src/core/exceptions/: EmitException.cpp  EmitException.hpp
src/core/exceptons/: EmitException.hpp
src/core/plugin/: BasicPlugin.hpp
src/core/properties/: Property.hpp  PropertyChangeListener.hpp  PropertyGroup.cpp  PropertyGroup.hpp
